Fixes #6 by adding invisible border to the table

--- a/style.css
+++ b/style.css
@@ -143,7 +143,13 @@ td {
     }
 }
 
-#minefield {
+.minefield-board {
+    border: 5px solid transparent;
+    position: relative;
+    left: -5px;
+}
+
+.minefield-board tbody{
 	background-color: lightgray;
 }
 
